--- a/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
@@ -3,6 +3,46 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Group 6's Final Project</h1>
+    <p>Created By: Blake Szalapski, Brian Faught, and Bella Orr</p>
+</div>
+
+<div class="container mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <p>
+                This website was created as the Final Project for Group 6 in Web Server Application Development.
+                It uses ASP.NET Core MVC to display who we are and our favorite hobbies while showcasing what we’ve learned
+                about building dynamic, data-driven web applications.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="container text-center mt-4">
+    <div class="d-flex flex-column align-items-center">
+        <div class="card shadow-sm border-0 mb-4" style="width: 22rem;">
+            <div class="card-body">
+                <h5 class="card-title">Explore Our Hobbies</h5>
+                <p class="card-text">Check out some of our favorite hobbies.</p>
+                <a class="btn btn-primary" asp-controller="Home" asp-action="HobbyHome">See Hobbies</a>
+            </div>
+        </div>
+
+        <div class="card shadow-sm border-0 mb-4" style="width: 22rem;">
+            <div class="card-body">
+                <h5 class="card-title">Meet the Team</h5>
+                <p class="card-text">Get to know more about Blake, Brian, and Bella.</p>
+                <a class="btn btn-primary" asp-controller="Home" asp-action="AboutHome">Meet Us</a>
+            </div>
+        </div>
+
+        <div class="card shadow-sm border-0 mb-4" style="width: 22rem;">
+            <div class="card-body">
+                <h5 class="card-title">View Our Dataset</h5>
+                <p class="card-text">Here is our dataset that relates to our hobbies.</p>
+                <a class="btn btn-primary" asp-controller="Home" asp-action="Dataset">See Data</a>
+            </div>
+        </div>
+    </div>
 </div>
