--- a/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
@@ -17,13 +17,40 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                <div class="navbar-collapse" id=" navbarNavDropdown">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- This is the home tab -->
+                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                         </li>
+                        <!-- This is the About Dropdown that lists all the memebers' about sections -->
+                        <li class ="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="aboutDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                About
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Bella">About Blake</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Blake">About Brian</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Brian">About Bella</a></li>
+                            </ul>
                         </li>
+
+                        <!-- This is the Hobbies Dropdown that lists all the memebers' favorite hobbies-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="hobbyDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                Hobbies
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="hobbyDropdown">
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BellaHobby">Blakes’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BlakeHobby">Brian’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BrianHobby">Bella’s Hobby</a></li>
+                            </ul>
+                        </li>
+                        <!-- This is the tab that leads to the dataset -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Dataset">Dataset</a>
                         </li>
                     </ul>
                 </div>
@@ -37,9 +64,6 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - Group6_WSAD_FinalProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
