added infor about bella and created the dataset for hobbies

--- a/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
                                 About
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Bella">About Blake</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Blake">About Brian</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Brian">About Bella</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Blake">About Blake</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Brian">About Brian</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Bella">About Bella</a></li>
                             </ul>
                         </li>
 
@@ -43,9 +43,9 @@
                                 Hobbies
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="hobbyDropdown">
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BellaHobby">Blakes’s Hobby</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BlakeHobby">Brian’s Hobby</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BrianHobby">Bella’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BlakeHobby">Blakes’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="BrianHobby">Brian’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Bella" asp-action="BellaHobbies">Bella’s Hobby</a></li>
                             </ul>
                         </li>
                         <!-- This is the tab that leads to the dataset -->
