added more to bellashobbies, css, and created the Eplore page for hobbies

--- a/Group6_WSAD_FinalProject/Views/Bella/AboutBella.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Bella/AboutBella.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "About Bella";
 }
 
+
+<h1 class="text-center title-banner">About Me</h1>
 <div class="about-grid">
     <div class="about-text">
-        <h1>About Me</h1>
-
         <p>
             My name is Bella Orr, and I am a fourth-year student at the University of Cincinnati,
             expecting to graduate in Spring 2027. I am majoring in Information Technology with tracks
