--- a/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome To Group 6's Final Project</h1>
+<div class="title-banner"">
+    <h1>Welcome To Group 6's Final Project</h1>
     <p>Created By: Blake Szalapski, Brian Faught, and Bella Orr</p>
 </div>
 
@@ -25,7 +25,7 @@
             <div class="card-body">
                 <h5 class="card-title">Explore Our Hobbies</h5>
                 <p class="card-text">Check out some of our favorite hobbies.</p>
-                <a class="btn btn-primary" asp-controller="Home" asp-action="HobbyHome">See Hobbies</a>
+                <a class="btn btn-primary" asp-controller="Home" asp-action="Explore">See Hobbies</a>
             </div>
         </div>
 
