--- a/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
                                 About
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Blake">About Blake</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Brian">About Brian</a></li>
-                                <li><a class="dropdown-item" asp-controller="Home" asp-action="Bella">About Bella</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="AboutBlake">About Blake</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="AboutBrian">About Brian</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="AboutBella">About Bella</a></li>
                             </ul>
                         </li>
 
