--- a/Group6_WSAD_FinalProject/wwwroot/css/site.css
+++ b/Group6_WSAD_FinalProject/wwwroot/css/site.css
@@ -43,3 +43,10 @@ body {
     justify-content: flex-end;
 }
 
+.title-banner {
+    background-color: #cce5ff;
+    padding: 1rem 0; 
+    text-align: center;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
