--- a/Group6_WSAD_FinalProject/Views/Bella/BellaHobbies.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Bella/BellaHobbies.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="container mt-5">
+    <div class="p-4 rounded shadow-sm panel-border">
 
     <h1 class="title-banner">Bella's Favorite Hobbies</h1>
 
@@ -36,6 +37,7 @@
                 </div>
 
 
+                <!--Concert Images-->
                 <div class="row text-center">
                     <div class="col-4 mb-3">
                         <img src="~/images/Breakaway.jpg" alt="Breakaway Concert"  style="height: 450px; object-fit: cover;" />
@@ -51,4 +53,6 @@
             </div>
         }
     }
+
+    </div>
 </div>
