Finished My Pages and Dataset Page
Completed my about and hobby page along with the Dataset page that I created a dynamic html table for. Contains a table with id owner name category reason and difficultylevel.

--- a/Group6_WSAD_FinalProject/Views/Blake/AboutBlake.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Blake/AboutBlake.cshtml
@@ -3,22 +3,33 @@
     ViewData["Title"] = "About Blake";
 
 }
+<div class="container mt-5">
+    <div class="p-4 rounded shadow-sm panel-border">
+        <h1 class="text-center title-banner mb-4">About Me</h1>
+        <div class="about-grid">
+            <div class="about-text">
+                <p>Hello, my name is Blake Szalapski and I am a 5th year IT Game Development and Simulation major. I'm originally from Northwest Ohio near Toledo. Game engines I have worked with throughout my degree include Unity, Unreal Engine 5, and Phaser.
+                 I am currently working on a Unity game project for my Senior Capstone Project along with four other teammates. I have previously held four Co-ops at Sportsmans Market INC, better known as Sportys Pilot
+                Shop, as the assistant to the system administrator. It was a networking heavy position where I would regularly configure physical network components like:
+                </p>
+                    <br />
+                <ul>
+                    <li>Firewalls</li>
+                    <li>Switches</li>
+                    <li>Wiring</li>
+                    <li>Servers</li>
+                    <li>User PCs</li>
+                    <li>Security Cameras</li>
+                </ul>
+                    <br />
+                <p>
+                    Other than networking, I was also in charge of doing most of the help-desk troubleshooting for users, internet connectivity, and printers.
+                </p>
 
-<h2> About Blake</h2>
-<p>Hello, my name is Blake Szalapski and I am a 5th year IT Game Development and Simulation major. I'm originally from Northwest Ohio near Toledo. Game engines I have worked with throughout my degree include Unity, Unreal Engine 5, and Phaser.
-   I am currently working on a Unity game project for my Senior Capstone Project along with four other teammates. I have previously held four Co-ops at Sportsmans Market INC, better known as Sportys Pilot
-   Shop, as the assistant to the system administrator. It was a networking heavy position where I would regularly configure physical network components like:
-</p>
-<br />
-<ul>
-    <li>Firewalls</li>
-    <li>Switches</li>
-    <li>Wiring</li>
-    <li>Servers</li>
-    <li>User PCs</li>
-    <li>Security Cameras</li>
-</ul>
-<br />
-<p>
-    Other than networking, I was also in charge of doing most of the help-desk troubleshooting for users, internet connectivity, and printers.
-</p>
+              </div>
+                    <div class="about-image">
+                        <img id="headshot" src="~/images/Blake-Photo.jpg" alt="Blake's Photo" />
+                    </div>
+        </div>
+    </div>
+</div>
