--- a/Group6_WSAD_FinalProject/Views/Hobbies/Explore.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Hobbies/Explore.cshtml
@@ -17,7 +17,7 @@
                 <div class="card shadow-lg border-0 h-100" style="width: 22rem;">
                     <div class="card-body">
                         <h4 class="card-title">Blake's Hobby</h4>
-                        <p class="card-text">Add short description here</p>
+                        <p class="card-text">Blake enjoys gaming, so he plays video games on Xbox and PC.</p>
                         <a asp-controller="Blake" asp-action="BlakeHobbies" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
