--- a/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
@@ -43,14 +43,14 @@
                                 Hobbies
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="hobbyDropdown">
-                                <li><a class="dropdown-item" asp-controller="Blake" asp-action="BlakeHobby">Blakes’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Blake" asp-action="BlakeHobbies">Blakes’s Hobby</a></li>
                                 <li><a class="dropdown-item" asp-controller="Brian" asp-action="BrianHobby">Brian’s Hobby</a></li>
                                 <li><a class="dropdown-item" asp-controller="Bella" asp-action="BellaHobbies">Bella’s Hobby</a></li>
                             </ul>
                         </li>
                         <!-- This is the tab that leads to the dataset -->
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Dataset">Dataset</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dataset" asp-action="Index">Dataset</a>
                         </li>
                     </ul>
                 </div>
