--- a/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
             <div class="card-body">
                 <h5 class="card-title">View Our Dataset</h5>
                 <p class="card-text">Here is our dataset that relates to our hobbies.</p>
-                <a class="btn btn-primary" asp-controller="Home" asp-action="Dataset">See Data</a>
+                    <a class="btn btn-primary" href="/Dataset/Index">See Data</a>
             </div>
         </div>
     </div>
