added Brian to the owner table and fixed navigation

--- a/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="hobbyDropdown">
                                 <li><a class="dropdown-item" asp-controller="Blake" asp-action="BlakeHobbies">Blakes’s Hobby</a></li>
-                                <li><a class="dropdown-item" asp-controller="Brian" asp-action="BrianHobby">Brian’s Hobby</a></li>
+                                <li><a class="dropdown-item" asp-controller="Brian" asp-action="BrianHobbies">Brian’s Hobby</a></li>
                                 <li><a class="dropdown-item" asp-controller="Bella" asp-action="BellaHobbies">Bella’s Hobby</a></li>
                             </ul>
                         </li>
