Updated Pages and Added Meet the Team
Touched up my pages, fixed some db filling issues with brians hobbies page and added the meet the team routing page.

--- a/Group6_WSAD_FinalProject/Views/Blake/AboutBlake.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Blake/AboutBlake.cshtml
@@ -8,11 +8,17 @@
         <h1 class="text-center title-banner mb-4">About Me</h1>
         <div class="about-grid">
             <div class="about-text">
-                <p>Hello, my name is Blake Szalapski and I am a 5th year IT Game Development and Simulation major. I'm originally from Northwest Ohio near Toledo. Game engines I have worked with throughout my degree include Unity, Unreal Engine 5, and Phaser.
-                 I am currently working on a Unity game project for my Senior Capstone Project along with four other teammates. I have previously held four Co-ops at Sportsmans Market INC, better known as Sportys Pilot
-                Shop, as the assistant to the system administrator. It was a networking heavy position where I would regularly configure physical network components like:
+                <p>Hello, my name is Blake Szalapski and I am a 5th year double major in BS IT Game Development and Simulation and BS Software Application Development. 
+                    I'm originally from Northwest Ohio near Toledo. Game engines I have worked with throughout my degree include Unity, Unreal Engine 5, and Phaser.
+                 I am currently working on a Unity game project for my Senior Capstone Project along with four other teammates. 
                 </p>
                     <br />
+                    <h2>Co-op Experience</h2>
+                <p>
+                    I have previously held four Co-ops at Sportsmans Market INC, better known as Sportys Pilot
+                    Shop, as the assistant to the system administrator. I was in charge of doing most of the help-desk troubleshooting for users,
+                    internet connectivity, and printers.It was also a networking heavy position where I would regularly configure physical network components like:
+                </p>
                 <ul>
                     <li>Firewalls</li>
                     <li>Switches</li>
@@ -22,9 +28,13 @@
                     <li>Security Cameras</li>
                 </ul>
                     <br />
-                <p>
-                    Other than networking, I was also in charge of doing most of the help-desk troubleshooting for users, internet connectivity, and printers.
-                </p>
+                <h2>Future Goals</h2>
+                <p>After college, My desired goals are:</p>
+                <ul>
+                    <li>Be employed at a game development studio in a game dev position</li>
+                    <li>Create my own game</li>
+                </ul>
+             
 
               </div>
                     <div class="about-image">
