--- a/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             <div class="card-body">
                 <h5 class="card-title">Explore Our Hobbies</h5>
                 <p class="card-text">Check out some of our favorite hobbies.</p>
-                <a class="btn btn-primary" asp-controller="Hobbies" asp-action="Explore">See Hobbies</a>
+                    <a class="btn btn-primary" href="/Hobbies/Explore">See Hobbies</a>
             </div>
         </div>
 
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <h5 class="card-title">Meet the Team</h5>
                 <p class="card-text">Get to know more about Blake, Brian, and Bella.</p>
-                <a class="btn btn-primary" asp-controller="Home" asp-action="AboutHome">Meet Us</a>
+                <a class="btn btn-primary" href="/About/About">Meet Us</a>
             </div>
         </div>
 
