Updated Brian's hobby, images, and merge with main

--- a/Group6_WSAD_FinalProject/Views/Brian/AboutBrian.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Brian/AboutBrian.cshtml
@@ -43,7 +43,7 @@
             </div>
 
             <div class="about-image">
-                <img id="headshot" src="~/images/brian-lawn.jpg" alt="Brian's Lawn" />
+                <img id="headshot" src="~/images/brian-lawn.jpeg" alt="Brian's Lawn" />
             </div>
         </div>
 
