--- a/Group6_WSAD_FinalProject/Views/Brian/BrianHobbies.cshtml
+++ b/Group6_WSAD_FinalProject/Views/Brian/BrianHobbies.cshtml
@@ -37,15 +37,15 @@
                     <!--Images-->
                     <div class="row text-center">
                         <div class="col-4 mb-3">
-                            <img src="~/images/brian-lawn.jpg" alt="Brian's Lawn" style="height: 450px; object-fit: cover;" />
-                        </div>
-                        <div class="col-4 mb-3">
-                            <img src="~/images/brian-pc.jpg" alt="Brian's PC Build" style="height: 450px; object-fit: cover;" />
-                        </div>
-                        <div class="col-4 mb-3">
-                            <img src="~/images/brian-server.jpg" alt="Brian's Server Setup" style="height: 450px; object-fit: cover;" />
-                        </div>
+                            <img src="~/images/brian-lawn1.jpg" alt="Brian's Lawn" style="height: 450px; object-fit: cover;" />
                     </div>
+                     <div class="col-4 mb-3">
+                            <img src="~/images/brian-lawn2.jpg" alt="Brian's Lawn 2" style="height: 450px; object-fit: cover;" />
+                    </div>
+                    <div class="col-4 mb-3">
+                            <img src="~/images/brian-lawn3.JPG" alt="Brian's Lawn 3" style="height: 450px; object-fit: cover;" />
+                    </div>
+                  </div>
 
                 </div>
             }
